Updated the openapi spec to not use nested models, and generated the models.
